# upcoming-movies-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  README.md  RELEASE_NOTES.md  Taskfile.yml  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: daily-ingest.yml  daily-pipeline.yml  hourly-feeds.yml  merge-main-into-dependencies.yml  test.yml
docs/adr/: 0001-trade-feeds-only-pause-google-news.md  0002-release-date-events-grounded-in-tmdb-change.md  0003-ingestion-scheduling-coolify-in-process.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
migrations/: env.py
migrations/versions/: 1b46a53537db_add_event_subject_key.py  2655e0fe958c_add_catalog_film_slug.py  26f140c4f334_full_tmdb_capture_and_normalized_.py  37f37eb3edeb_add_story_link_state_and_link_ingest_.py  3f83224e776f_add_user_is_admin.py  46406c2cc268_add_first_look_event_type.py  4a3522ad0785_add_catalog_film_alternative_title.py  4bc1fcd02c53_add_news_event_and_event_story_tables.py  (+14 more)
scripts/: audit_source_roi.py  backfill_source_domains.py  build_eventgroup_review.py  build_review_html.py  cleanup_blocked_sources.py  cleanup_google_sources.py  diagnose_linking.py  eval_cluster_diff.py  export_link_validation_draft.py  measure_link_cost.py  measure_title_filter.py  propose_event_groups.py  propose_validation_labels.py  validate_clustering.py  validate_clustering_overmerge.py  validate_linking.py  validate_summaries.py
tests/: conftest.py
(+164 files in other folders)
