[project]
name = "upmovies"
version = "0.1.0"
description = "Upcoming Movies Tracker backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
    "alembic>=1.18.5",
    "pydantic>=2.10",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28.1",
    "feedparser>=6.0.11",
    "argon2-cffi>=25.1.0",
    "email-validator>=2.0.0",
    "sentry-sdk[fastapi]>=2.64.0",
    "anthropic>=0.49",
    "python-slugify>=8.0",
    "tldextract>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
    "pyright>=1.1.411",
    "httpx>=0.28.1",
    "types-python-slugify>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/upmovies"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/upmovies"]
concurrency = ["thread", "greenlet"]
omit = []
[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
